soap.* package now is SAAJ based. no AXIS in [wsdl-generic] !!!
git-svn-id: https://taverna.googlecode.com/svn/taverna/utils/net.sf.taverna.wsdl-generic/branches/wsdl-generic-wsdl4j-maintenance@14847 bf327186-88b3-11dd-a302-d386e5130c1c